--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,37 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>my menu</title>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-<style>
-</style>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>
+        my menu
+    </title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <style>
+    </style>
+    </link>
+    </meta>
+    </meta>
 </head>
+
 <body>
-<h1>menu site</h1>
-
-<div class="row">
-  <div  class="col-lg-4 col-md-6 col-sm-12 internal-divs"><h2 id="title1">Chicken</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
-  <div  class="col-lg-4 col-md-6 col-sm-12 internal-divs"><h2 id="title2">Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
-  <div  class="col-lg-4 col-md-12 col-sm-12 internal-divs" ><h2 id="title3" >Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
-  
-</div>
-
+    <div>
+        <h1>
+            Our Menu
+        </h1>
+    </div>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12 internal-divs">
+            <div class="internal-divs2">
+                <h2 id="title1">
+                    Chicken
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure.
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 internal-divs">
+            <div class="internal-divs2">
+                <h2 id="title2">
+                    Beef
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure.
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 internal-divs">
+            <div class="internal-divs2">
+                <h2 id="title3">
+                    Sushi
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
